<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="facebook_application_id">619220875950309</string>
    <string name="fb_login_protocol_scheme">fb619220875950309</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="search">Search</string>
    <string name="user_s_photo">User\'s photo</string>
    <string name="restaurant_bitmap">Restaurant bitmap</string>
    <string name="workmate_photo">Workmate photo</string>

<!-- From firebase messaging example -->
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="has_joined">%s is joining</string>
    <string name="your_lunch">your lunch</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="name_of_the_user">Name of the user</string>
    <string name="email_of_the_user">Email of the user</string>
    <string name="title_of_the_drawer">Go4Lunch</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="workmate_fragment_title">Available workmates</string>
    <string name="map_fragment_title">I\'m Hungry!</string>
    <string name="restaurant_fragment_title">I\'m Hungry!</string>
    <string name="has_not_decided_yet">%s hasn\'t decided yet</string>
    <string name="restaurant_unknown">unknown</string>
    <string name="is_eating_in">%s is eating in %s</string>
    <string name="button_restaurant_join">Button restaurant join</string>
    <string name="star">Star</string>
    <string name="notification_restaurant_line1">You are attended to the restaurant %s</string>
    <string name="notification_title">Dear %s it\'s time to lunch!</string>
    <string name="notification_attendees_line1">\n Other attendees:</string>
    <string name="notification_attendees_line2">\n       %s</string>
</resources>