<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listJoinWorkmateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.DisplayRestaurantActivity">

        <ImageView
            android:id="@+id/display_restaurant_bitmap"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/restaurant_bitmap"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/display_restaurant_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:text="@string/join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_restaurant_bitmap" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/display_details_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_restaurant_bitmap">

            <TextView
                android:id="@+id/display_restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="40dp"
                android:background="@color/red"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/display_restaurant_opening_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:background="@color/red"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/display_restaurant_name" />

            <TextView
                android:id="@+id/display_restaurant_dummy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/display_restaurant_opening_hours" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/display_restaurant_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_baseline_call_24"
            android:text="@string/call"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_details_restaurant" />

        <Button
            android:id="@+id/display_restaurant_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_baseline_public_24"
            android:text="@string/like"
            android:textColor="@color/red"
            app:layout_constraintEnd_toStartOf="@+id/display_restaurant_website_uri"
            app:layout_constraintStart_toEndOf="@+id/display_restaurant_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/display_details_restaurant" />

        <Button
            android:id="@+id/display_restaurant_website_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_baseline_public_24"
            android:text="@string/website"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_details_restaurant" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/display_restaurant_phone_number">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listJoinWorkmate"
            android:name="com.openclassrooms.go4lunch.ui.DisplayRestaurantActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layoutManager="LinearLayoutManager"
            tools:context=".ui.DisplayRestaurantActivity"
            tools:listitem="@layout/joined_workmate" />
    </RelativeLayout>
</LinearLayout>
